# Cunit

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  calculator.c  calculator.h  cmake_install.cmake  sum_test.c  testcommit.txt
Testing/Temporary/: CTestCostData.txt
